# stencilizer

./: .gitignore  README.md  pyproject.toml
src/stencilizer/: __init__.py  exceptions.py
src/stencilizer/cli/: __init__.py  app.py  output.py
src/stencilizer/config/: __init__.py  settings.py
src/stencilizer/core/: __init__.py  _bezier.py  analyzer.py  bridge.py  geometry.py  horizontal_bridge.py  horizontal_multi_island.py  merger.py  multi_island.py  processor.py  surgery.py  vertical_bridge.py
src/stencilizer/domain/: __init__.py  bridge.py  contour.py  glyph.py
src/stencilizer/io/: __init__.py  converter.py  reader.py  writer.py
src/stencilizer/utils/: __init__.py  logging.py
tests/: __init__.py  test_domain_models.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_diagnostic.py  test_e2e_output.py  test_stencilization.py  test_winding_preservation.py
tests/unit/: __init__.py  test_analyzer.py  test_bridge.py  test_io.py  test_processor.py  test_surgery.py
